--- a/css/main.css
+++ b/css/main.css
@@ -30,11 +30,11 @@ body {
   filter: blur(0.1vmin);
   background-image: 
   radial-gradient(ellipse at top, transparent 0%, var(--dark-color)), 
-  radial-gradient(ellipse at bottom, var(--dark-color), #000000), 
+  radial-gradient(ellipse at bottom, var(--dark-color), rgba(36, 0, 24, 0.2)), 
   repeating-linear-gradient(220deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px), 
   repeating-linear-gradient(189deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px), 
   repeating-linear-gradient(148deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px), 
-  linear-gradient(90deg, rgb(0, 0, 0), rgb(0, 0, 0));
+  linear-gradient(90deg, rgb(0, 255, 250), rgb(240, 240, 240));
 }
 
 .flowers {
