--- a/css/main.css
+++ b/css/main.css
@@ -1022,7 +1022,7 @@ body {
 .long-g .leaf {
   --w: 15vmin;
   --h: 40vmin;
-  --c: #1aaa15;
+  --c: #cc63c3;
   position: absolute;
   bottom: 0;
   width: var(--w);
